Changes Fixed the input mode and the option mode visibility bug Added the functionality to the option mode function by being able to add the options through the arguments while calling the function Added the functionality to the input mode by being able to set the placeholder and value of the typed input through the arguments while calling the functions Added a delay to the tyler bot responses Made it so that the player cant say anything while tyler is speaking

--- a/JS rpg game/style.css
+++ b/JS rpg game/style.css
@@ -27,3 +27,7 @@ html {
     bottom: 0;
     left: 0;
 }
+
+.Invisible {
+    display: none;
+}
